Bug 242202 - [Media Player] Fix media engine fallback logic
Summary: [Media Player] Fix media engine fallback logic
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Youssef Soliman
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-30 13:19 PDT by Youssef Soliman
Modified: 2022-07-01 22:37 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Youssef Soliman 2022-06-30 13:19:22 PDT
.
Comment 1 Youssef Soliman 2022-06-30 13:27:24 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1960
Comment 2 Radar WebKit Bug Importer 2022-06-30 13:28:32 PDT
<rdar://problem/96241947>
Comment 3 EWS 2022-07-01 22:37:00 PDT
Committed 252088@main (8f6c0209fc8a): <https://commits.webkit.org/252088@main>

Reviewed commits have been landed. Closing PR #1960 and removing active labels.