[Media Player] Fix media engine fallback logic https://bugs.webkit.org/show_bug.cgi?id=242202

Reviewed by Eric Carlson.

Currently the logic for falling back to a different media player in the
occasion that the current media player is unable to load the media resource
assumes that there exists a "next best" media engine (which means another
media engine supports the current MIME type).

This does not consider the case when none of the registered media engines
know if they can support the content based on the MIME type. In such a scenario,
the next registered media engine should attempt to load the content.

A HashSet is used to keep track of the attempted media engines to prevent
an infinite cycle of reloads.

* Source/WebCore/platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::networkStateChanged):
(WebCore::bestMediaEngineForSupportParameters):
(WebCore::MediaPlayer::nextMediaEngine):
(WebCore::MediaPlayer::nextBestMediaEngine):
(WebCore::MediaPlayer::loadWithNextMediaEngine):
* Source/WebCore/platform/graphics/MediaPlayer.h:

Canonical link: https://commits.webkit.org/252088@main